test/main/com/ocaml/sdk/output/errors/samples/unbound/class_type.ml
function (x :
#bar) -> ();;

(*
Error: Unbound class type bar
*)